--- a/Parte3/Parte3.ipynb
+++ b/Parte3/Parte3.ipynb
@@ -4128,8 +4128,8 @@
         "# Escribir en un nuevo archivo CSV\n",
         "Escritura_leido.to_csv(salida + \"mtcars_nuevo_procesados.csv\", index=False)\n",
         "# Leer el archivo CSV procesado para verificar\n",
-        "lectura = pd.read_csv(salida + \"mtcars_nuevo_procesados.csv\")\n",
-        "display(lectura.tail())\n"
+        "procesado = pd.read_csv(salida + \"mtcars_nuevo_procesados.csv\")\n",
+        "display(procesado.tail())\n"
       ]
     },
     {
@@ -8252,8 +8252,8 @@
         "# Utilizando algunos parametros\n",
         "print(\"Modificado\")\n",
         "xls.to_excel(salida + \"mtcars_nuevo_modificado.xlsx\", sheet_name='Autos', na_rep='N/A', float_format='%.1f', index=False)\n",
-        "lectura = pd.read_excel(salida + \"mtcars_nuevo_modificado.xlsx\", \"Autos\")\n",
-        "display(lectura.head())\n",
+        "modificado = pd.read_excel(salida + \"mtcars_nuevo_modificado.xlsx\", \"Autos\")\n",
+        "display(modificado.head())\n",
         "\n",
         "\n",
         "print(\"Añadido\")\n",
