Funamentos de la Programacion

--- a/Parte3/Parte3.ipynb
+++ b/Parte3/Parte3.ipynb
@@ -21,7 +21,7 @@
       ],
       "source": [
         "#IMPORTANTE: Compilar PRIMERO\n",
-        "\n",
+        "#Compilar cada vez que se actualize la dirreccion de los archivos \n",
         "#Para correcto fuuncionamiento de todo la parte 3 accedemos a las 3 librerias\n",
         "#NOTA: Cada bloque de codigo es independiente del anterior(al momento de ejecutar uno independientemente)\n",
         "import pandas as pd\n",
