--- a/Parte3/Parte3.ipynb
+++ b/Parte3/Parte3.ipynb
@@ -31979,6 +31979,90 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#EJEMPLO APLICATIVO 1\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "#1 Recopilacion de datos\n",
+        "\n",
+        "# Cargar el archivo CSV en un DataFrame\n",
+        "df = pd.read_csv(lectura + 'iris.csv')\n",
+        "\n",
+        "#2 Limpieza y Preprocesamiento de Datos:\n",
+        "\n",
+        "# Mostrar las primeras filas del DataFrame para inspección\n",
+        "print(\"Primeras filas del DataFrame:\")\n",
+        "print(df.head())\n",
+        "\n",
+        "# Información básica del DataFrame\n",
+        "print(\"\\nInformación del DataFrame:\")\n",
+        "print(df.info())\n",
+        "\n",
+        "# Estadísticas descriptivas\n",
+        "print(\"\\nEstadísticas descriptivas:\")\n",
+        "print(df.describe())\n",
+        "\n",
+        "# Verificar valores nulos\n",
+        "print(\"\\nValores nulos en el DataFrame:\")\n",
+        "print(df.isnull().sum())\n",
+        "\n",
+        "#3 Análisis Exploratorio de Datos (EDA) Y #4 Visualización de Resultados:\n",
+        "\n",
+        "# Histograma de cada característica\n",
+        "df.hist(bins=20, figsize=(10, 10))\n",
+        "plt.suptitle(\"Histogramas de las características del conjunto de datos Iris\")\n",
+        "plt.show()\n",
+        "\n",
+        "# Boxplot para cada característica\n",
+        "df.plot(kind='box', subplots=True, layout=(2,3), figsize=(12, 8), title=\"Boxplots de las características del conjunto de datos Iris\")\n",
+        "plt.show()\n",
+        "\n",
+        "# Pairplot de Seaborn para visualizar relaciones entre características\n",
+        "import seaborn as sns\n",
+        "sns.pairplot(df, hue='Species', markers=[\"o\", \"s\", \"D\"])\n",
+        "plt.suptitle(\"Pairplot del conjunto de datos Iris\")\n",
+        "plt.show()\n",
+        "\n",
+        "# Análisis de correlación (excluyendo la columna 'Species')\n",
+        "correlation_matrix = df.drop('Species', axis=1).corr()  # Excluimos la columna 'Species'\n",
+        "print(\"\\nMatriz de correlación:\")\n",
+        "print(correlation_matrix)\n",
+        "\n",
+        "# Mapa de calor de la matriz de correlación\n",
+        "plt.figure(figsize=(8, 6))\n",
+        "sns.heatmap(correlation_matrix, annot=True, cmap='coolwarm', linewidths=0.5)\n",
+        "plt.title(\"Mapa de calor de la matriz de correlación\")\n",
+        "plt.show()\n",
+        "\n",
+        "# Análisis de correlación con scatter plots\n",
+        "sns.scatterplot(data=df, x='Sepal.Length', y='Sepal.Width', hue='Species') # Use 'Sepal.Length' instead of 'sepal_length'\n",
+        "plt.title(\"Scatter plot de Sepal Length vs Sepal Width\")\n",
+        "plt.show()\n",
+        "\n",
+        "sns.scatterplot(data=df, x='Petal.Length', y='Petal.Width', hue='Species') # Use 'Petal.Length' instead of 'petal_length'\n",
+        "plt.title(\"Scatter plot de Petal Length vs Petal Width\")\n",
+        "plt.show()\n",
+        "\n",
+        "# Análisis de valores promedio por especie\n",
+        "print(\"\\nPromedio de características por especie:\")\n",
+        "print(df.groupby('Species').mean()) # Change 'species' to 'Species'\n",
+        "\n",
+        "# Visualización de los promedios por especie\n",
+        "df.groupby('Species').mean().plot(kind='bar', figsize=(10, 6)) # Change 'species' to 'Species'\n",
+        "plt.title(\"Promedio de características por especie\")\n",
+        "plt.xlabel(\"Especie\")\n",
+        "plt.ylabel(\"Promedio\")\n",
+        "plt.xticks(rotation=0)\n",
+        "plt.show()"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 171,
       "metadata": {
         "colab": {
@@ -32192,7 +32276,7 @@
         }
       ],
       "source": [
-        "#EJEMPLO APLICATIVO\n",
+        "#EJEMPLO APLICATIVO 2\n",
         "\n",
         "#1 Recopilacion de datos\n",
         "\n",
