--- a/Parte3/Parte3.ipynb
+++ b/Parte3/Parte3.ipynb
@@ -32566,7 +32566,7 @@
         }
       ],
       "source": [
-        "\n",
+        "#procesamiento con txt\n",
         "#1 Recopilacion de datos\n",
         "\n",
         "# Cargar el archivo mtcars.txt en un DataFrame\n",
